--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-  <th:block th:include="include :: header('分组管理')" />
+  <th:block th:include="include :: header('管理分组')" />
   <th:block th:include="include :: bootstrap-editable-css" />
   <th:block th:include="include :: select2-css" />
 </head>
