--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -304,7 +304,7 @@
             <li>登录管理后台</li>
           </ol>
           <ul dir="auto">
-            <li>浏览器访问【 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 】登录管理后台，用户名/密码：<code>admin</code>/<code>admin123</code></li>
+            <li>浏览器访问【 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 】登录管理后台，用户名/密码：<code>admin</code>/<code>123456</code></li>
             <li>登录后在左侧菜单栏找到<code>调度管理</code>菜单，即可使用调度管理功能</li>
             <li><strong>作业配置</strong>：作业(job)配置，包括查看、新增、修改、删除、触发、禁用等</li>
             <li><strong>任务实例</strong>：job在某一时间点被触发执行的实例(instance)，一个实例会拆分成若干个任务(task)
@@ -318,7 +318,7 @@
             <li>链接地址</li>
           </ol>
           <ul dir="auto">
-            <li>管理后台<strong>演示地址</strong>：【 <a href="http://ponfee.cn:8000/" rel="nofollow">http://ponfee.cn:8000/</a> 】，用户名/密码：<code>disjob</code>/<code>disjob123</code></li>
+            <li>管理后台<strong>演示地址</strong>：【 <a href="http://ponfee.cn:8000/" rel="nofollow">http://ponfee.cn:8000/</a> 】，用户名/密码：<code>disjob</code>/<code>123456</code></li>
             <li>在线查看<strong>文档地址</strong>：<code>正在建设中，敬请期待！</code></li>
           </ul>
           <h2 tabindex="-1" id="user-content-user-guide" dir="auto"><a class="heading-link" href="#user-guide">User Guide<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h2>
