--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -48,7 +48,7 @@
         },
         {
           field: 'currentPoolSize',
-          title: '当前线程数'
+          title: '当前总线程数'
         },
         {
           field: 'activePoolSize',
@@ -67,15 +67,15 @@
           title: '已执行完成任务数'
         },
         {
-          field: 'jvmThreadActiveCount',
-          title: 'JVM活跃线程数'
-        },
-        {
           field: 'closed',
           title: '线程池是否已关闭',
           formatter: function(value, row, index) {
             return value ? '<span class="badge badge-success">是</span>' : '<span class="badge badge-info">否</span>';
           }
+        },
+        {
+          field: 'jvmThreadActiveCount',
+          title: 'JVM活跃线程数'
         },
         {
           field: 'alsoSupervisor',
