--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/token.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/token.html
@@ -87,7 +87,7 @@
       tempElement.select();
       document.execCommand('copy')
       document.body.removeChild(tempElement);
-      top.layer.msg("复制完成", {
+      top.layer.msg("已复制到剪贴板", {
         icon: $.modal.icon(modal_status.SUCCESS),
         time: 500,
         shade: [0.1, '#8F8F8F']
