--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/token.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/token.html
@@ -87,11 +87,14 @@
       tempElement.select();
       document.execCommand('copy')
       document.body.removeChild(tempElement);
+      $.modal.msgSuccess("已复制到剪贴板");
+      /*
       top.layer.msg("已复制到剪贴板", {
         icon: $.modal.icon(modal_status.SUCCESS),
         time: 500,
         shade: [0.1, '#8F8F8F']
       });
+      */
       return false;
     }
 
