--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
@@ -135,7 +135,7 @@
 
     function workers(group) {
       table.set();
-      $.modal.popupRight("Workers", prefix + '/worker?group=' + group);
+      $.modal.popupRight("Worker", prefix + '/worker?group=' + group);
     }
   </script>
 
