add bootstrap tagsinput

--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/include.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/include.html
@@ -65,6 +65,14 @@
     <script th:src="@{/ajax/libs/bootstrap-select/bootstrap-select.min.js?v=1.13.18}"></script>
 </div>
 
+<!-- bootstrap-tagsinput -->
+<div th:fragment="bootstrap-tagsinput-css">
+  <link th:href="@{/ajax/libs/bootstrap-tagsinput/bootstrap-tagsinput.css?v=0.6.1}" rel="stylesheet"/>
+</div>
+<div th:fragment="bootstrap-tagsinput-js">
+  <script th:src="@{/ajax/libs/bootstrap-tagsinput/bootstrap-tagsinput.min.js?v=0.6.1}"></script>
+</div>
+
 <!-- datetimepicker日期和时间插件 -->
 <div th:fragment="datetimepicker-css">
     <link th:href="@{/ajax/libs/datapicker/bootstrap-datetimepicker.min.css?v=2.4.4}" rel="stylesheet"/>
