--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -114,7 +114,7 @@
     });
 
     function view(id, text) {
-      var elem = $("#" + id);
+      const elem = $("#" + id);
       if (text) {
         try {
           elem.JSONView(text);
