--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
@@ -24,7 +24,7 @@
 
   <th:block th:include="include :: footer" />
   <script th:inline="javascript">
-    var prefix = ctx + "disjob/mggroup"
+    const prefix = ctx + "disjob/mggroup"
 
     $("#form-group-add").validate({
       focusCleanup: true,
