--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
@@ -17,7 +17,7 @@
 
   <script th:inline="javascript">
     $(function () {
-      var options = {
+      const options = {
         data: [[${list}]],
         sidePagination: "client",
         showSearch: false,
