--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
@@ -46,7 +46,7 @@
   <th:block th:include="include :: bootstrap-tagsinput-js" />
 
   <script th:inline="javascript">
-    var prefix = ctx + "disjob/mygroup";
+    const prefix = ctx + "disjob/mygroup";
 
     $("#form-mygroup-edit").validate({
       focusCleanup: true
