--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
@@ -15,7 +15,7 @@
   <div th:include="include :: footer"></div>
   <script th:inline="javascript">
     $(function () {
-      var options = {
+      const options = {
         data: [[${list}]],
         sidePagination: "client",
         showSearch: false,
