--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
@@ -42,11 +42,11 @@
   <th:block th:include="include :: select2-js" />
 
   <script th:inline="javascript">
-    var operateFlag = [[${@permission.hasPermi('disjob:mygroup:operate')}]];
-    var prefix = ctx + "disjob/mygroup";
+    const operateFlag = [[${@permission.hasPermi('disjob:mygroup:operate')}]];
+    const prefix = ctx + "disjob/mygroup";
 
     $(function () {
-      var options = {
+      const options = {
         url: prefix + "/list",
         fixedColumns: true,
         fixedNumber: 2,
@@ -111,7 +111,7 @@
             if (![[${@permission.isPermitted('disjob:mygroup:operate')}]]) {
               return '';
             }
-            var actions = [];
+            const actions = [];
             actions.push("<a class='btn btn-success btn-rounded btn-xs " + operateFlag + "' href='javascript:void(0)' onclick='edit(&quot;" + row.group + "&quot;)'><i class='fa fa-edit'></i> 编辑</a> ");
             return '<a tabindex="0" class="btn btn-info btn-rounded btn-xs" role="button" data-container="body" data-placement="left" data-toggle="popover" data-html="true" data-trigger="hover" data-content="' + actions.join('') + '"><i class="fa fa-chevron-circle-right"></i> 操作</a>';
           }
@@ -124,7 +124,7 @@
 
     function resetForm() {
       $.form.reset();
-      var elem = $("select[name='groups']");
+      const elem = $("select[name='groups']");
       elem.val(elem.val()).trigger("change");
     }
 
