--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -128,8 +128,8 @@
 				</div>
                 <!-- 右侧栏 -->
                 <ul class="nav navbar-top-links navbar-right welcome-message">
-                    <li><a data-toggle="tooltip" data-trigger="hover" data-placement="bottom" title="github" href="https://github.com/ponfee/disjob" target="_blank"><i class="fa fa-github"></i> github</a></li>
-                    <li><a data-toggle="tooltip" data-trigger="hover" data-placement="bottom" title="gitee" href="https://gitee.com/fupengfei/disjob" target="_blank"><i class="fa fa-git-square"></i> gitee</a></li>
+                    <li><a data-toggle="tooltip" data-trigger="hover" data-placement="bottom" title="github" href="https://github.com/dromara/disjob" target="_blank"><!--<i class="fa fa-github"></i>--><img th:src="@{/img/github.ico}" style="width:13px;" /> github</a></li>
+                    <li><a data-toggle="tooltip" data-trigger="hover" data-placement="bottom" title="gitee" href="https://gitee.com/dromara/disjob" target="_blank"><!--<i class="fa fa-git-square"></i>--><img th:src="@{/img/gitee.ico}" style="width:13px;" /> gitee</a></li>
                     <li><a data-toggle="tooltip" data-trigger="hover" data-placement="bottom" title="锁定屏幕" href="javascript:" id="lockScreen"><i class="fa fa-lock"></i> 锁屏</a></li>
                     <li><a data-toggle="tooltip" data-trigger="hover" data-placement="bottom" title="全屏显示" href="javascript:" id="fullScreen"><i class="fa fa-arrows-alt"></i> 全屏</a></li>
                     <li class="dropdown user-menu">
